--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SamlAttributeDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SamlAttributeDialog.form
@@ -3,7 +3,7 @@
   <grid id="a4abd" binding="mainPanel" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="12" left="12" bottom="12" right="12"/>
     <constraints>
-      <xy x="32" y="62" width="560" height="528"/>
+      <xy x="32" y="62" width="560" height="551"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -215,7 +215,7 @@
                   </scrollpane>
                 </children>
               </grid>
-              <grid id="5ba88" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="5ba88" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -243,19 +243,55 @@
                   </component>
                   <component id="94870" class="javax.swing.JComboBox" binding="attValueComparisonComboBox">
                     <constraints>
-                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
                   </component>
                   <component id="7795" class="javax.swing.JLabel" binding="attValueComparisonLabel">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <preferred-size width="250" height="14"/>
                       </grid>
                     </constraints>
                     <properties>
                       <text value="Attribute Value Comparison:"/>
                     </properties>
+                  </component>
+                  <component id="6205f" class="javax.swing.JLabel" binding="emptyVariableLabel">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="If value resolves to empty string:"/>
+                    </properties>
+                  </component>
+                  <component id="4150d" class="javax.swing.JComboBox" binding="emptyVariableComboBox">
+                    <constraints>
+                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="9ed29" class="javax.swing.JCheckBox" binding="missingWhenEmptyStringCheckBox" default-binding="true">
+                    <constraints>
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Missing when empty string"/>
+                    </properties>
+                  </component>
+                  <component id="59754" class="javax.swing.JLabel" binding="variableNotFoundLabel">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="If variable not found:"/>
+                    </properties>
+                  </component>
+                  <component id="1b129" class="javax.swing.JComboBox" binding="variableNotFoundComboBox">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
                   </component>
                 </children>
               </grid>
