--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="24" y="16" width="786" height="546"/>
+      <xy x="24" y="16" width="786" height="558"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -250,7 +250,7 @@
                       </component>
                     </children>
                   </grid>
-                  <grid id="21721" binding="builtinServicesPanel" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="21721" binding="builtinServicesPanel" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="2" use-parent-layout="false"/>
@@ -271,7 +271,7 @@
                       </component>
                       <component id="4431b" class="javax.swing.JCheckBox" binding="stsCheckBox" default-binding="true">
                         <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.STS.label"/>
@@ -280,7 +280,7 @@
                       </component>
                       <component id="6d702" class="javax.swing.JCheckBox" binding="csrHandlerCheckBox" default-binding="true">
                         <constraints>
-                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.CSRHandler.label"/>
@@ -289,7 +289,7 @@
                       </component>
                       <component id="e7f7a" class="javax.swing.JCheckBox" binding="passwordChangeCheckBox" default-binding="true">
                         <constraints>
-                          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.PasswordChange.label"/>
@@ -298,7 +298,7 @@
                       </component>
                       <component id="c5447" class="javax.swing.JCheckBox" binding="wsdlProxyCheckBox" default-binding="true">
                         <constraints>
-                          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.WSDLProxy.label"/>
@@ -307,11 +307,21 @@
                       </component>
                       <component id="465c4" class="javax.swing.JCheckBox" binding="snmpQueryCheckBox" default-binding="true">
                         <constraints>
-                          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.SNMPQuery.label"/>
                           <toolTipText resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.SNMPQuery.tooltip"/>
+                        </properties>
+                      </component>
+                      <component id="b36f6" class="javax.swing.JCheckBox" binding="pingServiceCheckBox" default-binding="true">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <selected value="false"/>
+                          <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.PING.label"/>
+                          <toolTipText resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.PING.tooltip"/>
                         </properties>
                       </component>
                     </children>
