--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XmlSecurityProperties.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XmlSecurityProperties.form
@@ -3,7 +3,7 @@
   <grid id="24f2b" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="10" bottom="0" right="10"/>
     <constraints>
-      <xy x="46" y="21" width="1142" height="1152"/>
+      <xy x="46" y="21" width="1142" height="1190"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -295,7 +295,7 @@
                 </properties>
                 <border type="none" title="Encryption Method"/>
                 <children>
-                  <grid id="95ee7" binding="encryptionCheckBoxesPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="95ee7" binding="encryptionCheckBoxesPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -308,7 +308,7 @@
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="AES 128bit"/>
+                          <text value="AES 128 CBC"/>
                         </properties>
                       </component>
                       <component id="4640b" class="javax.swing.JCheckBox" binding="aes192CheckBox">
@@ -316,7 +316,7 @@
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="AES 192bit"/>
+                          <text value="AES 192 CBC"/>
                         </properties>
                       </component>
                       <component id="2e110" class="javax.swing.JCheckBox" binding="aes256CheckBox">
@@ -324,7 +324,7 @@
                           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="AES 256bit"/>
+                          <text value="AES 256 CBC"/>
                         </properties>
                       </component>
                       <component id="555b1" class="javax.swing.JCheckBox" binding="tripleDESCheckBox" default-binding="true">
@@ -333,6 +333,22 @@
                         </constraints>
                         <properties>
                           <text value="Triple DES"/>
+                        </properties>
+                      </component>
+                      <component id="e2183" class="javax.swing.JCheckBox" binding="aes128GcmCheckBox">
+                        <constraints>
+                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="AES 128 GCM"/>
+                        </properties>
+                      </component>
+                      <component id="1439b" class="javax.swing.JCheckBox" binding="aes256GcmCheckBox">
+                        <constraints>
+                          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="AES 256 GCM"/>
                         </properties>
                       </component>
                     </children>
