--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshTransportPropertiesPanel.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshTransportPropertiesPanel.form
@@ -47,7 +47,7 @@
           </component>
         </children>
       </grid>
-      <grid id="eef06" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="eef06" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -63,18 +63,15 @@
               <text resource-bundle="com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel" key="maxConcurrentSessionsPerUserLabel"/>
             </properties>
           </component>
-          <hspacer id="bb883">
-            <constraints>
-              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
           <component id="d35dd" class="javax.swing.JTextField" binding="maxConcurrentSessionsPerUserField">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <horizontalAlignment value="11"/>
+            </properties>
           </component>
           <component id="60cd9" class="javax.swing.JLabel">
             <constraints>
@@ -86,19 +83,33 @@
           </component>
           <component id="d99f0" class="javax.swing.JTextField" binding="idleTimeoutMinsField">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="11"/>
               <text value=""/>
             </properties>
           </component>
-          <hspacer id="2a343">
+          <component id="ee8c7" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
-          </hspacer>
+            <properties>
+              <text resource-bundle="com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel" key="maxConcurrentSessionLabel"/>
+            </properties>
+          </component>
+          <component id="f1e60" class="javax.swing.JTextField" binding="maxConcurrentSessionsField">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <horizontalAlignment value="11"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <vspacer id="81b35">
