--- a/modules/gateway/assertions/SplitJoinAssertion/src/main/java/com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog.form
+++ b/modules/gateway/assertions/SplitJoinAssertion/src/main/java/com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="propertyPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="8" bottom="0" right="8"/>
     <constraints>
-      <xy x="48" y="54" width="436" height="297"/>
+      <xy x="48" y="54" width="412" height="297"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -54,14 +54,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="9744b" class="javax.swing.JCheckBox" binding="regularExpressionCheckBox">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text resource-bundle="com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog" key="regExCheckBox"/>
-        </properties>
-      </component>
       <grid id="712d6" binding="targetVariablePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -70,6 +62,37 @@
         <properties/>
         <border type="none"/>
         <children/>
+      </grid>
+      <grid id="dc5e5" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="9744b" class="javax.swing.JCheckBox" binding="regularExpressionCheckBox">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog" key="regExCheckBox"/>
+            </properties>
+          </component>
+          <component id="aa1a1" class="javax.swing.JCheckBox" binding="ignoreEmptyValuesCheckBox" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog" key="ignoreEmpty"/>
+            </properties>
+          </component>
+          <hspacer id="3e16c">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+        </children>
       </grid>
     </children>
   </grid>
