--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveForeignTrustedCertificatePanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveForeignTrustedCertificatePanel.form
@@ -126,7 +126,7 @@
             <border type="none"/>
             <children/>
           </scrollpane>
-          <grid id="91b8c" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="91b8c" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -144,7 +144,7 @@
               </component>
               <vspacer id="35f95">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
               <component id="4a295" class="javax.swing.JButton" binding="createCert">
@@ -153,6 +153,14 @@
                 </constraints>
                 <properties>
                   <text value="Create &amp;a new Certificate"/>
+                </properties>
+              </component>
+              <component id="e37f0" class="javax.swing.JButton" binding="importCert">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Import &amp;a Certificate"/>
                 </properties>
               </component>
             </children>
