--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/saml/IssuerWizardStepPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/saml/IssuerWizardStepPanel.form
@@ -144,7 +144,7 @@
           </grid>
         </constraints>
         <properties>
-          <text resource-bundle="com/l7tech/console/panels/saml/resources/IssuerWizardStepPanel" key="issuerPanelTitle"/>
+          <text resource-bundle="com/l7tech/console/panels/saml/resources/IssuerWizardStepPanel" key="customizeIssuer"/>
         </properties>
       </component>
     </children>
