--- a/modules/gateway/assertions/UUIDGeneratorAssertion/src/main/java/com/l7tech/external/assertions/uuidgenerator/console/UUIDGeneratorPropertiesDialog.form
+++ b/modules/gateway/assertions/UUIDGeneratorAssertion/src/main/java/com/l7tech/external/assertions/uuidgenerator/console/UUIDGeneratorPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="150" width="282" height="77"/>
+      <xy x="20" y="150" width="282" height="78"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -25,7 +25,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <component id="d8f0" class="javax.swing.JTextField" binding="amountTextField">
+      <component id="d8f0" class="javax.swing.JTextField" binding="quantityTextField">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
