--- a/modules/gateway/assertions/UUIDGeneratorAssertion/src/main/java/com/l7tech/external/assertions/uuidgenerator/console/UUIDGeneratorPropertiesDialog.form
+++ b/modules/gateway/assertions/UUIDGeneratorAssertion/src/main/java/com/l7tech/external/assertions/uuidgenerator/console/UUIDGeneratorPropertiesDialog.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.external.assertions.uuidgenerator.console.UUIDGeneratorPropertiesDialog">
-  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="150" width="282" height="78"/>
+      <xy x="20" y="150" width="296" height="105"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -52,6 +52,22 @@
           </component>
         </children>
       </grid>
+      <component id="241a6" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Max Quantity:"/>
+        </properties>
+      </component>
+      <component id="d4c83" class="javax.swing.JTextField" binding="maxQuantityTextField">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
